@@ -1,6 +1,7 @@
+- Improve Arp request view
+- Add support to sort entries
 - Make parsable output compatible with the three view modes
 - Implement network guessing mode
 - Fix scroll limits
 - Add support for pcap format filter as parameter
 - Add identified hosts list
-- Clean up arprep and arpreq struct
